# autoproduct

./: .gitignore  CLAUDE.md  README.md  RUNBOOK.md  pyproject.toml
benchmarks/cases/: 01-sql-injection.yaml  02-missing-where.yaml  03-swallowed-exception.yaml  04-eval-user-input.yaml  05-hardcoded-secret.yaml  06-typosquat-dependency.yaml  07-csrf-missing.yaml  08-ssrf-variable-url.yaml  09-clean-rename.yaml  10-clean-constant.yaml  11-real-error-status-bypasses-gate.yaml  12-real-unhandled-timeout.yaml  13-real-returncode-unchecked.yaml
benchmarks/products-real/: 01-groupbuy-api.yaml  02-shortener-api.yaml  03-groupbuy-auto.yaml
blocks/miniprogram/: wxpay.js  (+2 more)
profiles/: app.yaml  miniprogram.yaml  web.yaml
skills/: context.md  correctness.md  performance.md  repo_graph.md  security.md  style.md
tests/: conftest.py  test_autopilot.py  test_bench.py  test_canary_scan.py  test_compound.py  test_correction_walkthrough_fixes.py  test_deeper_tier.py  test_deploy.py  test_e2e_review.py  test_fallback.py  test_fixpr.py  test_gap_closure.py  test_hitl.py  test_leader.py  test_leader_merge.py  test_learned_skills.py  test_m2_m7.py  test_maintenance.py  test_mode_router.py  test_mutation.py  test_plan_discover.py  test_probegen.py  test_product_bench.py  test_recover.py  test_render.py  test_replay.py  test_roadmaps.py  test_server.py  test_similarity_queue.py  test_spec_validator.py  test_studio.py  test_symbols.py  test_test_gate.py  test_tools.py  test_track_record.py  test_upstream.py  test_verify_scoring.py  test_voter_tools.py  test_wireup_features.py  test_yamlx.py
(+78 files in other folders)
